x-pack/filebeat/processors/decode_cef/cef/parser_recover.go
// Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
// or more contributor license agreements. Licensed under the Elastic License;
// you may not use this file except in compliance with the Elastic License.

//line parser_recover.rl:1
// Code generated by ragel DO NOT EDIT.

package cef

import (
	"errors"
	"fmt"
	"strconv"
)

//line parser_recover.go:13
var _cef_recover_eof_actions []byte = []byte{
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 0, 0,
	0, 0, 0, 0, 0, 0, 9, 9,
	0, 0, 0, 0, 0, 9, 9, 0,
	0, 9, 9, 0, 0, 9, 9, 0,
	0, 9, 9, 0, 0, 9, 9, 0,
	0, 0, 12, 16, 16, 16, 12, 16,
	16, 16, 19, 19, 12, 16, 16, 16,
	12, 16, 16, 16, 19, 16, 16, 16,
	16, 16, 16, 19, 16, 16, 16, 16,
	16, 16, 12, 16, 16, 16, 12, 16,
	16, 16, 19, 16, 16, 16, 19, 16,
	16, 16, 12, 16, 16, 16, 12, 16,
	16, 16, 19, 16, 16, 16, 19, 16,
	16, 16, 12, 16, 16, 16, 12, 16,
	16, 16, 19, 16, 16, 16, 19, 16,
	16, 16, 12, 16, 16, 16, 12, 16,
	16, 16, 19, 16, 16, 16, 19, 16,
	16, 16, 0,
}

const cef_recover_start int = 1
const cef_recover_first_final int = 58
const cef_recover_error int = 0

const cef_recover_en_gobble_extension int = 55
const cef_recover_en_main int = 1
const cef_recover_en_main_cef_extensions int = 28

// recoverExtensions unpacks a CEF message's extensions from messages with incomplete headers.
//
//line parser_recover.rl:16
func (e *Event) recoverExtensions(data string) error {
	cs, p, pe, eof := 0, 0, len(data), len(data)
	mark, mark_slash := 0, 0

	// state related to CEF values.
	var state cefState

	// recoveredErrs are problems with the message that the parser was able to
	// recover from (though the parsing might not be "correct").
	var recoveredErrs []error

	// Bait and switch to keep the header fields that
	// we were able to get from the initial parse.
	// e was already initialised by the call to unpack.
	t := *e

//line parser_recover.go:65
	{
		cs = cef_recover_start
	}

//line parser_recover.go:69
	{
		if (p) == (pe) {
			goto _test_eof
		}
		if cs == 0 {
			goto _out
		}
	_resume:
		switch cs {
		case 1:
			if data[(p)] == 67 {
				goto tr0
			}
			goto tr1
		case 0:
			goto _out
		case 2:
			if data[(p)] == 69 {
				goto tr2
			}
			goto tr1
		case 3:
			if data[(p)] == 70 {
				goto tr3
			}
			goto tr1
		case 4:
			if data[(p)] == 58 {
				goto tr4
			}
			goto tr1
		case 5:
			if 48 <= data[(p)] && data[(p)] <= 57 {
				goto tr5
			}
			goto tr1
		case 6:
			if data[(p)] == 124 {
				goto tr7
			}
			if 48 <= data[(p)] && data[(p)] <= 57 {
				goto tr6
			}
			goto tr1
		case 7:
			switch data[(p)] {
			case 32:
				goto tr9
			case 92:
				goto tr11
			case 95:
				goto tr10
			case 124:
				goto tr12
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr10
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr10
				}
			default:
				goto tr10
			}
			goto tr8
		case 8:
			switch data[(p)] {
			case 92:
				goto tr11
			case 124:
				goto tr12
			}
			goto tr8
		case 9:
			switch data[(p)] {
			case 92:
				goto tr13
			case 124:
				goto tr13
			}
			goto tr1
		case 10:
			switch data[(p)] {
			case 92:
				goto tr15
			case 124:
				goto tr16
			}
			goto tr14
		case 11:
			switch data[(p)] {
			case 32:
				goto tr18
			case 92:
				goto tr20
			case 95:
				goto tr19
			case 124:
				goto tr21
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr19
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr19
				}
			default:
				goto tr19
			}
			goto tr17
		case 12:
			switch data[(p)] {
			case 92:
				goto tr20
			case 124:
				goto tr21
			}
			goto tr17
		case 13:
			switch data[(p)] {
			case 92:
				goto tr22
			case 124:
				goto tr22
			}
			goto tr1
		case 14:
			switch data[(p)] {
			case 92:
				goto tr24
			case 124:
				goto tr25
			}
			goto tr23
		case 15:
			switch data[(p)] {
			case 32:
				goto tr27
			case 92:
				goto tr29
			case 95:
				goto tr28
			case 124:
				goto tr30
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr28
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr28
				}
			default:
				goto tr28
			}
			goto tr26
		case 16:
			switch data[(p)] {
			case 92:
				goto tr29
			case 124:
				goto tr30
			}
			goto tr26
		case 17:
			switch data[(p)] {
			case 92:
				goto tr31
			case 124:
				goto tr31
			}
			goto tr1
		case 18:
			switch data[(p)] {
			case 92:
				goto tr33
			case 124:
				goto tr34
			}
			goto tr32
		case 19:
			switch data[(p)] {
			case 32:
				goto tr36
			case 92:
				goto tr38
			case 95:
				goto tr37
			case 124:
				goto tr39
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr37
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr37
				}
			default:
				goto tr37
			}
			goto tr35
		case 20:
			switch data[(p)] {
			case 92:
				goto tr38
			case 124:
				goto tr39
			}
			goto tr35
		case 21:
			switch data[(p)] {
			case 92:
				goto tr40
			case 124:
				goto tr40
			}
			goto tr1
		case 22:
			switch data[(p)] {
			case 92:
				goto tr42
			case 124:
				goto tr43
			}
			goto tr41
		case 23:
			switch data[(p)] {
			case 32:
				goto tr45
			case 92:
				goto tr47
			case 95:
				goto tr46
			case 124:
				goto tr48
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr46
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr46
				}
			default:
				goto tr46
			}
			goto tr44
		case 24:
			switch data[(p)] {
			case 92:
				goto tr47
			case 124:
				goto tr48
			}
			goto tr44
		case 25:
			switch data[(p)] {
			case 92:
				goto tr49
			case 124:
				goto tr49
			}
			goto tr1
		case 26:
			switch data[(p)] {
			case 92:
				goto tr51
			case 124:
				goto tr52
			}
			goto tr50
		case 27:
			switch data[(p)] {
			case 32:
				goto tr53
			case 45:
				goto tr54
			case 95:
				goto tr56
			case 124:
				goto tr57
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr55
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr55
				}
			default:
				goto tr55
			}
			goto tr1
		case 28:
			switch data[(p)] {
			case 32:
				goto tr58
			case 95:
				goto tr59
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr59
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr59
				}
			default:
				goto tr59
			}
			goto tr1
		case 29:
			switch data[(p)] {
			case 61:
				goto tr61
			case 93:
				goto tr60
			case 95:
				goto tr60
			}
			switch {
			case data[(p)] < 48:
				if 44 <= data[(p)] && data[(p)] <= 46 {
					goto tr60
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 91:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr60
					}
				case data[(p)] >= 65:
					goto tr60
				}
			default:
				goto tr60
			}
			goto tr1
		case 58:
			switch data[(p)] {
			case 32:
				goto tr102
			case 61:
				goto tr62
			case 92:
				goto tr103
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr101
			}
			goto tr100
		case 59:
			switch data[(p)] {
			case 32:
				goto tr106
			case 61:
				goto tr62
			case 92:
				goto tr107
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr105
			}
			goto tr104
		case 60:
			switch data[(p)] {
			case 32:
				goto tr106
			case 61:
				goto tr62
			case 92:
				goto tr107
			case 95:
				goto tr108
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr108
					}
				case data[(p)] >= 65:
					goto tr108
				}
			default:
				goto tr108
			}
			goto tr104
		case 61:
			switch data[(p)] {
			case 32:
				goto tr106
			case 61:
				goto tr110
			case 92:
				goto tr107
			case 95:
				goto tr109
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr109
					}
				case data[(p)] >= 9:
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr109
					}
				case data[(p)] >= 65:
					goto tr109
				}
			default:
				goto tr109
			}
			goto tr104
		case 62:
			switch data[(p)] {
			case 32:
				goto tr113
			case 61:
				goto tr62
			case 92:
				goto tr114
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr112
			}
			goto tr111
		case 63:
			switch data[(p)] {
			case 32:
				goto tr117
			case 61:
				goto tr62
			case 92:
				goto tr118
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr116
			}
			goto tr115
		case 64:
			switch data[(p)] {
			case 32:
				goto tr117
			case 61:
				goto tr62
			case 92:
				goto tr118
			case 95:
				goto tr119
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr119
					}
				case data[(p)] >= 65:
					goto tr119
				}
			default:
				goto tr119
			}
			goto tr115
		case 65:
			switch data[(p)] {
			case 32:
				goto tr117
			case 61:
				goto tr110
			case 92:
				goto tr118
			case 95:
				goto tr120
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr120
					}
				case data[(p)] >= 9:
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr120
					}
				case data[(p)] >= 65:
					goto tr120
				}
			default:
				goto tr120
			}
			goto tr115
		case 30:
			switch data[(p)] {
			case 61:
				goto tr63
			case 92:
				goto tr63
			case 110:
				goto tr63
			case 114:
				goto tr63
			}
			goto tr62
		case 66:
			switch data[(p)] {
			case 32:
				goto tr123
			case 61:
				goto tr62
			case 92:
				goto tr124
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr122
			}
			goto tr121
		case 31:
			switch data[(p)] {
			case 61:
				goto tr64
			case 92:
				goto tr64
			case 110:
				goto tr64
			case 114:
				goto tr64
			}
			goto tr62
		case 67:
			switch data[(p)] {
			case 32:
				goto tr127
			case 61:
				goto tr62
			case 92:
				goto tr128
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr126
			}
			goto tr125
		case 32:
			switch data[(p)] {
			case 45:
				goto tr54
			case 124:
				goto tr57
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr54
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr54
				}
			default:
				goto tr54
			}
			goto tr1
		case 33:
			switch data[(p)] {
			case 32:
				goto tr53
			case 95:
				goto tr56
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr56
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr56
				}
			default:
				goto tr56
			}
			goto tr1
		case 34:
			switch data[(p)] {
			case 45:
				goto tr65
			case 61:
				goto tr61
			case 91:
				goto tr60
			case 93:
				goto tr60
			case 95:
				goto tr60
			case 124:
				goto tr57
			}
			switch {
			case data[(p)] < 48:
				if 44 <= data[(p)] && data[(p)] <= 46 {
					goto tr60
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr65
					}
				case data[(p)] >= 65:
					goto tr65
				}
			default:
				goto tr65
			}
			goto tr1
		case 35:
			switch data[(p)] {
			case 32:
				goto tr66
			case 92:
				goto tr47
			case 95:
				goto tr67
			case 124:
				goto tr48
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr67
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr67
				}
			default:
				goto tr67
			}
			goto tr44
		case 36:
			switch data[(p)] {
			case 61:
				goto tr69
			case 92:
				goto tr47
			case 95:
				goto tr68
			case 124:
				goto tr48
			}
			switch {
			case data[(p)] < 48:
				if 44 <= data[(p)] && data[(p)] <= 46 {
					goto tr68
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr68
					}
				case data[(p)] >= 65:
					goto tr68
				}
			default:
				goto tr68
			}
			goto tr44
		case 68:
			switch data[(p)] {
			case 32:
				goto tr131
			case 61:
				goto tr44
			case 92:
				goto tr132
			case 124:
				goto tr133
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr130
			}
			goto tr129
		case 69:
			switch data[(p)] {
			case 32:
				goto tr136
			case 61:
				goto tr44
			case 92:
				goto tr137
			case 124:
				goto tr138
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr135
			}
			goto tr134
		case 70:
			switch data[(p)] {
			case 32:
				goto tr136
			case 61:
				goto tr44
			case 92:
				goto tr137
			case 95:
				goto tr139
			case 124:
				goto tr138
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr135
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr139
					}
				case data[(p)] >= 65:
					goto tr139
				}
			default:
				goto tr139
			}
			goto tr134
		case 71:
			switch data[(p)] {
			case 32:
				goto tr136
			case 61:
				goto tr141
			case 92:
				goto tr137
			case 95:
				goto tr140
			case 124:
				goto tr138
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr140
					}
				case data[(p)] >= 9:
					goto tr135
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr140
					}
				case data[(p)] >= 65:
					goto tr140
				}
			default:
				goto tr140
			}
			goto tr134
		case 72:
			switch data[(p)] {
			case 32:
				goto tr144
			case 61:
				goto tr44
			case 92:
				goto tr145
			case 124:
				goto tr146
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr143
			}
			goto tr142
		case 73:
			switch data[(p)] {
			case 32:
				goto tr149
			case 61:
				goto tr44
			case 92:
				goto tr150
			case 124:
				goto tr151
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr148
			}
			goto tr147
		case 74:
			switch data[(p)] {
			case 32:
				goto tr149
			case 61:
				goto tr44
			case 92:
				goto tr150
			case 95:
				goto tr152
			case 124:
				goto tr151
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr148
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr152
					}
				case data[(p)] >= 65:
					goto tr152
				}
			default:
				goto tr152
			}
			goto tr147
		case 75:
			switch data[(p)] {
			case 32:
				goto tr149
			case 61:
				goto tr141
			case 92:
				goto tr150
			case 95:
				goto tr153
			case 124:
				goto tr151
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr153
					}
				case data[(p)] >= 9:
					goto tr148
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr153
					}
				case data[(p)] >= 65:
					goto tr153
				}
			default:
				goto tr153
			}
			goto tr147
		case 37:
			switch data[(p)] {
			case 61:
				goto tr63
			case 92:
				goto tr70
			case 110:
				goto tr63
			case 114:
				goto tr63
			case 124:
				goto tr49
			}
			goto tr62
		case 76:
			switch data[(p)] {
			case 32:
				goto tr156
			case 61:
				goto tr50
			case 92:
				goto tr157
			case 124:
				goto tr158
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr155
			}
			goto tr154
		case 77:
			switch data[(p)] {
			case 32:
				goto tr159
			case 45:
				goto tr160
			case 61:
				goto tr62
			case 92:
				goto tr118
			case 95:
				goto tr162
			case 124:
				goto tr163
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr161
					}
				case data[(p)] >= 65:
					goto tr161
				}
			default:
				goto tr161
			}
			goto tr115
		case 78:
			switch data[(p)] {
			case 32:
				goto tr164
			case 61:
				goto tr62
			case 92:
				goto tr118
			case 95:
				goto tr165
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr165
					}
				case data[(p)] >= 65:
					goto tr165
				}
			default:
				goto tr165
			}
			goto tr115
		case 79:
			switch data[(p)] {
			case 32:
				goto tr117
			case 61:
				goto tr61
			case 92:
				goto tr118
			case 95:
				goto tr166
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr166
					}
				case data[(p)] >= 9:
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr166
					}
				case data[(p)] >= 65:
					goto tr166
				}
			default:
				goto tr166
			}
			goto tr115
		case 80:
			switch data[(p)] {
			case 32:
				goto tr117
			case 45:
				goto tr160
			case 61:
				goto tr62
			case 92:
				goto tr118
			case 124:
				goto tr163
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr160
					}
				case data[(p)] >= 65:
					goto tr160
				}
			default:
				goto tr160
			}
			goto tr115
		case 81:
			switch data[(p)] {
			case 32:
				goto tr159
			case 61:
				goto tr62
			case 92:
				goto tr118
			case 95:
				goto tr162
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr162
					}
				case data[(p)] >= 65:
					goto tr162
				}
			default:
				goto tr162
			}
			goto tr115
		case 82:
			switch data[(p)] {
			case 32:
				goto tr117
			case 45:
				goto tr167
			case 61:
				goto tr61
			case 92:
				goto tr118
			case 95:
				goto tr166
			case 124:
				goto tr163
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr166
					}
				case data[(p)] >= 9:
					goto tr116
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] < 91:
					if 65 <= data[(p)] && data[(p)] <= 90 {
						goto tr167
					}
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr167
					}
				default:
					goto tr166
				}
			default:
				goto tr167
			}
			goto tr115
		case 38:
			switch data[(p)] {
			case 61:
				goto tr64
			case 92:
				goto tr71
			case 110:
				goto tr64
			case 114:
				goto tr64
			case 124:
				goto tr49
			}
			goto tr62
		case 83:
			switch data[(p)] {
			case 32:
				goto tr170
			case 61:
				goto tr50
			case 92:
				goto tr171
			case 124:
				goto tr172
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr169
			}
			goto tr168
		case 84:
			switch data[(p)] {
			case 32:
				goto tr173
			case 45:
				goto tr174
			case 61:
				goto tr62
			case 92:
				goto tr107
			case 95:
				goto tr176
			case 124:
				goto tr177
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr175
					}
				case data[(p)] >= 65:
					goto tr175
				}
			default:
				goto tr175
			}
			goto tr104
		case 85:
			switch data[(p)] {
			case 32:
				goto tr178
			case 61:
				goto tr62
			case 92:
				goto tr107
			case 95:
				goto tr179
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr179
					}
				case data[(p)] >= 65:
					goto tr179
				}
			default:
				goto tr179
			}
			goto tr104
		case 86:
			switch data[(p)] {
			case 32:
				goto tr106
			case 61:
				goto tr61
			case 92:
				goto tr107
			case 95:
				goto tr180
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr180
					}
				case data[(p)] >= 9:
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr180
					}
				case data[(p)] >= 65:
					goto tr180
				}
			default:
				goto tr180
			}
			goto tr104
		case 87:
			switch data[(p)] {
			case 32:
				goto tr106
			case 45:
				goto tr174
			case 61:
				goto tr62
			case 92:
				goto tr107
			case 124:
				goto tr177
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr174
					}
				case data[(p)] >= 65:
					goto tr174
				}
			default:
				goto tr174
			}
			goto tr104
		case 88:
			switch data[(p)] {
			case 32:
				goto tr173
			case 61:
				goto tr62
			case 92:
				goto tr107
			case 95:
				goto tr176
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr176
					}
				case data[(p)] >= 65:
					goto tr176
				}
			default:
				goto tr176
			}
			goto tr104
		case 89:
			switch data[(p)] {
			case 32:
				goto tr106
			case 45:
				goto tr181
			case 61:
				goto tr61
			case 92:
				goto tr107
			case 95:
				goto tr180
			case 124:
				goto tr177
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr180
					}
				case data[(p)] >= 9:
					goto tr105
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] < 91:
					if 65 <= data[(p)] && data[(p)] <= 90 {
						goto tr181
					}
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr181
					}
				default:
					goto tr180
				}
			default:
				goto tr181
			}
			goto tr104
		case 39:
			switch data[(p)] {
			case 32:
				goto tr72
			case 92:
				goto tr38
			case 95:
				goto tr73
			case 124:
				goto tr39
			}
			switch {
			case data[(p)] < 65:
				if 48 <= data[(p)] && data[(p)] <= 57 {
					goto tr73
				}
			case data[(p)] > 90:
				if 97 <= data[(p)] && data[(p)] <= 122 {
					goto tr73
				}
			default:
				goto tr73
			}
			goto tr35
		case 40:
			switch data[(p)] {
			case 61:
				goto tr75
			case 92:
				goto tr38
			case 95:
				goto tr74
			case 124:
				goto tr39
			}
			switch {
			case data[(p)] < 48:
				if 44 <= data[(p)] && data[(p)] <= 46 {
					goto tr74
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr74
					}
				case data[(p)] >= 65:
					goto tr74
				}
			default:
				goto tr74
			}
			goto tr35
		case 90:
			switch data[(p)] {
			case 32:
				goto tr184
			case 61:
				goto tr35
			case 92:
				goto tr185
			case 124:
				goto tr186
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr183
			}
			goto tr182
		case 91:
			switch data[(p)] {
			case 32:
				goto tr189
			case 61:
				goto tr35
			case 92:
				goto tr190
			case 124:
				goto tr191
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr188
			}
			goto tr187
		case 92:
			switch data[(p)] {
			case 32:
				goto tr189
			case 61:
				goto tr35
			case 92:
				goto tr190
			case 95:
				goto tr192
			case 124:
				goto tr191
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr188
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr192
					}
				case data[(p)] >= 65:
					goto tr192
				}
			default:
				goto tr192
			}
			goto tr187
		case 93:
			switch data[(p)] {
			case 32:
				goto tr189
			case 61:
				goto tr194
			case 92:
				goto tr190
			case 95:
				goto tr193
			case 124:
				goto tr191
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr193
					}
				case data[(p)] >= 9:
					goto tr188
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr193
					}
				case data[(p)] >= 65:
					goto tr193
				}
			default:
				goto tr193
			}
			goto tr187
		case 94:
			switch data[(p)] {
			case 32:
				goto tr197
			case 61:
				goto tr35
			case 92:
				goto tr198
			case 124:
				goto tr199
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr196
			}
			goto tr195
		case 95:
			switch data[(p)] {
			case 32:
				goto tr202
			case 61:
				goto tr35
			case 92:
				goto tr203
			case 124:
				goto tr204
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr201
			}
			goto tr200
		case 96:
			switch data[(p)] {
			case 32:
				goto tr202
			case 61:
				goto tr35
			case 92:
				goto tr203
			case 95:
				goto tr205
			case 124:
				goto tr204
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
					goto tr201
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 90:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr205
					}
				case data[(p)] >= 65:
					goto tr205
				}
			default:
				goto tr205
			}
			goto tr200
		case 97:
			switch data[(p)] {
			case 32:
				goto tr202
			case 61:
				goto tr194
			case 92:
				goto tr203
			case 95:
				goto tr206
			case 124:
				goto tr204
			}
			switch {
			case data[(p)] < 48:
				switch {
				case data[(p)] > 13:
					if 44 <= data[(p)] && data[(p)] <= 46 {
						goto tr206
					}
				case data[(p)] >= 9:
					goto tr201
				}
			case data[(p)] > 57:
				switch {
				case data[(p)] > 93:
					if 97 <= data[(p)] && data[(p)] <= 122 {
						goto tr206
					}
				case data[(p)] >= 65:
					goto tr206
				}
			default:
				goto tr206
			}
			goto tr200
		case 41:
			switch data[(p)] {
			case 61:
				goto tr63
			case 92:
				goto tr76
			case 110:
				goto tr63
			case 114:
				goto tr63
			case 124:
				goto tr40
			}
			goto tr62
		case 98:
			switch data[(p)] {
			case 32:
				goto tr209
			case 61:
				goto tr41
			case 92:
				goto tr210
			case 124:
				goto tr211
			}
			if 9 <= data[(p)] && data[(p)] <= 13 {
				goto tr208
			}
			goto tr207
		case 99:
			switch data[(p)] {
			case 32:
				goto tr212
			case 61:
				goto tr44
			case 92:
				goto tr150
			case 95:
				goto tr213
			case 124:
				goto tr151
			}
			switch {
			case data[(p)] < 48:
				if 9 <= data[(p)] && data[(p)] <= 13 {
